tests/neg/fence.stk
fun main =
  ((5 +) * 6) p            // error

  (3 + 8 * (8 *) + 6) p    // error
